Fix person top scaling on mobile / tablet

--- a/frontend/src/styles/pages/person.scss
+++ b/frontend/src/styles/pages/person.scss
@@ -10,22 +10,24 @@
     position: absolute;
     top: 0;
     left: 0;
-    height: 300px;
+    height: 235px;
     width: 100%;
     background-position: center;
     background-size: cover;
-    // background-attachment: fixed;
     background-repeat: no-repeat;
-    // opacity: 0.2;
+    opacity: 0.8;
     overflow: hidden;
     filter: grayscale(1) brightness(0.5);
     transform: translateZ(0);
-    // transition: background-position 0.05s linear;
+    top: -25px;
+    left: -20px;
+    right: -20px;
+    width: calc(100% + 40px);
 
     @include media-breakpoint-up(md) {
       background-position: 50% 200%;
       background-size: 100% auto;
-      height: 50vh;
+      height: calc(50vh - 65px);
       background-attachment: fixed;
     }
 
@@ -38,6 +40,7 @@
       left: -50px;
       right: -50px;
       width: calc(100% + 100px);
+      opacity: 1;
     }
   }
 
@@ -174,7 +177,6 @@
       left: 0;
       height: 200px;
       width: 100%;
-      background: rgba(black, 0.2);
       z-index: -1;
     }
   }
